ci: specify region

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ jobs:
           targetType: inline
           script: 'PATH=$PATH:$HOME/.local/bin make deploy'
         env:
+          AWS_REGION: ${aws.region}
           AWS_ACCESS_KEY_ID: $(aws.access_key)
           AWS_SECRET_ACCESS_KEY: $(aws.secret_key)
           AWS_LAMBDA_NAME: $(aws.lambda_name)
