ci: add step for bundling the lamdba

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,16 +16,22 @@ jobs:
         displayName: Installing pip-related packages
         inputs:
           targetType: inline
-          script: 'pip3 install setuptools wheel'
+          script: pip3 install setuptools wheel
 
       - task: Bash@3
         displayName: Installing required utils
         inputs:
           targetType: inline
-          script: 'pip3 install virtualenv awscli --user'
+          script: pip3 install virtualenv awscli --user
 
       - task: Bash@3
-        displayName: Deploying Lambda
+        displayName: Bundling package for deployment
+        inputs:
+          targetType: filePath
+          filePath: ./ci/build.sh
+
+      - task: Bash@3
+        displayName: Deploying
         inputs:
           targetType: inline
           script: 'PATH=$PATH:$HOME/.local/bin make deploy'
