--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+lxml==4.5.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multitasking==0.0.9
-numpy==1.19.1; python_version >= '3.6'
-pandas==1.1.0; python_full_version >= '3.6.1'
+numpy==1.19.2
+pandas==1.1.3
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2020.1
 requests==2.24.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-yfinance==0.1.54
+yfinance==0.1.55
