--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 jedi = "*"
 pylint = "*"
+watchdog = "*"
+argh = "*"
+pylint-fail-under = "*"
+black = "*"
 
 [packages]
 yfinance = "*"
@@ -15,3 +19,6 @@ numpy = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
