--- a/Pipfile
+++ b/Pipfile
@@ -17,8 +17,8 @@ numpy = "*"
 
 [scripts]
 start = "python main.py"
-standard = "black -S ./stalker"
-check = "black -S --check ./stalker"
+standard = "black -S stalker"
+check = "black -S --check stalker"
 lint = "pylint-fail-under --fail_under 10.0 stalker"
 test = "true"
 
