--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ jobs:
       - task: Bash@3
         inputs:
           targetType: inline
-          script: python3 -m pylint-fail-under --fail_under 10.0 stalker
+          script: python3 -m pylint_fail_under --fail_under 10.0 stalker
         displayName: Check linter
 
   - job: Test
