ci: trigger for branches

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,11 @@ trigger:
     include:
       - v*
 
+  branches:
+    include:
+      - master
+      - dev
+
 
 variables:
   vmImageName: ubuntu-latest
